--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 app/code/community/Find/
 app/code/community/Phoenix/
 app/code/core/
-app/design/adminhtml/default/default/
 app/design/adminhtml/default/find/
 app/design/frontend/base/
 app/design/frontend/default/blank/
-app/design/frontend/default/default/
 app/design/frontend/default/iphone/
 app/design/frontend/default/modern/
 app/design/install/
@@ -83,14 +81,17 @@ shell/abstract.php
 shell/compiler.php
 shell/indexer.php
 shell/log.php
-skin/adminhtml/default/default/
 skin/frontend/base/
 skin/frontend/default/blank/
 skin/frontend/default/blue/
-skin/frontend/default/default/
 skin/frontend/default/french/
 skin/frontend/default/german/
 skin/frontend/default/iphone/
 skin/frontend/default/modern/
 skin/install/
 var/
+.buildpath
+.project
+.settings
+*.swp
+*~
